--- a/index.html
+++ b/index.html
@@ -12,200 +12,228 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Effective Solutions for Your Business</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="name_web"
-          >Web<span class="name_studio">Studio</span></a
-        >
-        <ul>
-          <li>
-            <a href="./index.html" class="name_link">Studio</a>
-          </li>
-          <li>
-            <a href="./index.html" class="name_link">Portfolio</a>
-          </li>
-          <li>
-            <a href="./index.html" class="name_link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com" class="mail"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="tel">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="container container-header">
+        <nav class="header-navigation">
+          <a href="./index.html" class="logo"
+            >Web<span class="logo-link">Studio</span></a
+          >
+          <ul class="menu">
+            <li>
+              <a href="./index.html" class="menu-link">Studio</a>
+            </li>
+            <li>
+              <a href="./index.html" class="menu-link">Portfolio</a>
+            </li>
+            <li>
+              <a href="./index.html" class="menu-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-text">
+            <li>
+              <a href="mailto:info@devstudio.com" class="mail"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="tel">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
-      <section class="section_link_title">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button" class="button_service">Order Service</button>
+      <section class="section-title">
+        <div class="section-title-item">
+          <h1 class="section-title-link">
+            Effective Solutions for Your Business
+          </h1>
+        </div>
+        <button type="button" class="button-service">Order Service</button>
       </section>
-      <section>
-        <h2 class="advantages">Advantages</h2>
-        <ul>
-          <li>
-            <h3 class="name_title name_title_advantages">Strategy</h3>
-            <p class="text_title text_title_advantages">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-
-          <li>
-            <h3 class="name_title">Punctuality</h3>
-            <p class="text_title">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="name_title">Diligence</h3>
-            <p class="text_title">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="name_title">Technologies</h3>
-            <p class="text_title">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="section_team">
-        <h2 class="section_team_title">Our Team</h2>
-        <ul>
-          <li class="section_images">
-            <img
-              src="./images/img1.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="name_title name_title_team">Mark Guerrero</h3>
-            <p class="text_title text_title_team">Product Designer</p>
-          </li>
-          <li class="section_images">
-            <img
-              src="./images/img2.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="name_title name_title_team">Tom Ford</h3>
-            <p class="text_title text_title_team">Frontend Developer</p>
-          </li>
-          <li class="section_images">
-            <img
-              src="./images/img3.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="name_title name_title_team">Camila Garcia</h3>
-            <p class="text_title text_title_team">Marketing</p>
-          </li>
-          <li class="section_images">
-            <img
-              src="./images/img4.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="name_title name_title_team">Daniel Wilson</h3>
-            <p class="text_title text_title_team">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2 class="portfolio_title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/img5.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="name_title">Banking App</h3>
-            <p class="text_title">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/img6.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="name_title">Cashless Payment</h3>
-            <p class="text_title">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img7.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="name_title">Meditation App</h3>
-            <p class="text_title">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/img8.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="name_title">Taxi Service</h3>
-            <p class="text_title">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img9.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="name_title">Screen Illustrations</h3>
-            <p class="text_title">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/img10.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="name_title">Online Courses</h3>
-            <p class="text_title">Marketing</p>
-          </li>
-        </ul>
-      </section>
+      <div class="container">
+        <section class="section-advantages">
+          <h2 class="visually-hidden">Advantages</h2>
+          <ul class="advantages">
+            <li class="advantages-item">
+              <h3 class="name-title advantages-name-title">Strategy</h3>
+              <p class="text-title advantages-text-title">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="name-title advantages-name-title">Punctuality</h3>
+              <p class="text-title advantages-text-title">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="name-title advantages-name-title">Diligence</h3>
+              <p class="text-title advantages-text-title">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="name-title advantages-name-title">Technologies</h3>
+              <p class="text-title advantages-text-title">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </section>
+      </div>
+      <div class="container">
+        <section class="section-team">
+          <h2 class="section-team-title">Our Team</h2>
+          <ul class="images-title-text">
+            <li class="images-team">
+              <img
+                src="./images/img1.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="name-title team-name-title">Mark Guerrero</h3>
+              <p class="text-title team-text-title">Product Designer</p>
+            </li>
+            <li class="images-team">
+              <img
+                src="./images/img2.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="name-title team-name-title">Tom Ford</h3>
+              <p class="text-title team-text-title">Frontend Developer</p>
+            </li>
+            <li class="images-team">
+              <img
+                src="./images/img3.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="name-title team-name-title">Camila Garcia</h3>
+              <p class="text-title team-text-title">Marketing</p>
+            </li>
+            <li class="images-team">
+              <img
+                src="./images/img4.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="name-title team-name-title">Daniel Wilson</h3>
+              <p class="text-title team-text-title">UI Designer</p>
+            </li>
+          </ul>
+        </section>
+      </div>
+      <div class="container">
+        <section class="section-portfolio">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio">
+            <li class="images">
+              <img
+                src="./images/img5.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <div class="title-name-group">
+                <h3 class="name-title">Banking App</h3>
+                <p class="text-title">App</p>
+              </div>
+            </li>
+            <li class="images">
+              <img
+                src="./images/img6.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <div class="title-name-group">
+                <h3 class="name-title">Cashless Payment</h3>
+                <p class="text-title">Marketing</p>
+              </div>
+            </li>
+            <li class="images">
+              <img
+                src="./images/img7.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <div class="title-name-group">
+                <h3 class="name-title">Meditation App</h3>
+                <p class="text-title">App</p>
+              </div>
+            </li>
+            <li class="images">
+              <img
+                src="./images/img8.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <div class="title-name-group">
+                <h3 class="name-title">Taxi Service</h3>
+                <p class="text-title">Marketing</p>
+              </div>
+            </li>
+            <li class="images">
+              <img
+                src="./images/img9.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="title-name-group">
+                <h3 class="name-title">Screen Illustrations</h3>
+                <p class="text-title">Design</p>
+              </div>
+            </li>
+            <li class="images">
+              <img
+                src="./images/img10.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <div class="title-name-group">
+                <h3 class="name-title">Online Courses</h3>
+                <p class="text-title">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
     <footer>
-      <a href="./index.html" class="name_web"
-        >Web<span class="name_studio_footer">Studio</span></a
-      >
-      <p class="footer_text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="conteiner footer-menu">
+        <a href="./index.html" class="logo logo-footer"
+          >Web<span class="footer-logo-link">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
