--- a/index.html
+++ b/index.html
@@ -54,16 +54,18 @@
       </div>
     </header>
     <main>
-      <section class="section-title">
-        <div class="section-title-item">
-          <h1 class="section-title-link">
-            Effective Solutions for Your Business
-          </h1>
-        </div>
-        <button type="button" class="button-service">Order Service</button>
-      </section>
       <div class="container">
-        <section class="section-advantages">
+        <section class="section-title">
+          <div class="section-title-item">
+            <h1 class="section-title-link">
+              Effective Solutions for Your Business
+            </h1>
+          </div>
+          <button type="button" class="button-service">Order Service</button>
+        </section>
+      </div>
+      <section class="section-advantages">
+        <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="advantages">
             <li class="advantages-item">
@@ -95,10 +97,10 @@
               </p>
             </li>
           </ul>
-        </section>
-      </div>
-      <div class="container">
-        <section class="section-team">
+        </div>
+      </section>
+      <section class="section-team">
+        <div class="container container-color">
           <h2 class="section-team-title">Our Team</h2>
           <ul class="images-title-text">
             <li class="images-team">
@@ -142,10 +144,10 @@
               <p class="text-title team-text-title">UI Designer</p>
             </li>
           </ul>
-        </section>
-      </div>
-      <div class="container">
-        <section class="section-portfolio">
+        </div>
+      </section>
+      <section class="section-portfolio">
+        <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio">
             <li class="images">
@@ -221,11 +223,11 @@
               </div>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <footer>
-      <div class="conteiner footer-menu">
+      <div class="container footer-menu">
         <a href="./index.html" class="logo logo-footer"
           >Web<span class="footer-logo-link">Studio</span></a
         >
