--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
     <header class="header">
       <div class="container container-header">
         <nav class="header-navigation">
-          <a href="./index.html" class="logo"
-            >Web<span class="logo-link">Studio</span></a
-          >
+          <div class="box-logo">
+            <a href="./index.html" class="logo"
+              >Web<span class="logo-link">Studio</span></a
+            >
+          </div>
           <ul class="menu">
             <li>
               <a href="./index.html" class="menu-link">Studio</a>
@@ -111,8 +113,8 @@
                 height="260"
               />
               <div class="section-team-wrapper">
-                <h3 class="name-title">Mark Guerrero</h3>
-                <p class="text-title">Product Designer</p>
+                <h3 class="name-title-team">Mark Guerrero</h3>
+                <p class="text-title-team">Product Designer</p>
               </div>
             </li>
             <li class="images-team">
@@ -123,8 +125,8 @@
                 height="260"
               />
               <div class="section-team-wrapper">
-                <h3 class="name-title team-name-title">Tom Ford</h3>
-                <p class="text-title team-text-title">Frontend Developer</p>
+                <h3 class="name-title-team">Tom Ford</h3>
+                <p class="text-title-team">Frontend Developer</p>
               </div>
             </li>
             <li class="images-team">
@@ -135,8 +137,8 @@
                 height="260"
               />
               <div class="section-team-wrapper">
-                <h3 class="name-title team-name-title">Camila Garcia</h3>
-                <p class="text-title team-text-title">Marketing</p>
+                <h3 class="name-title-team">Camila Garcia</h3>
+                <p class="text-title-team">Marketing</p>
               </div>
             </li>
             <li class="images-team">
@@ -147,8 +149,8 @@
                 height="260"
               />
               <div class="section-team-wrapper">
-                <h3 class="name-title team-name-title">Daniel Wilson</h3>
-                <p class="text-title team-text-title">UI Designer</p>
+                <h3 class="name-title-team">Daniel Wilson</h3>
+                <p class="text-title-team">UI Designer</p>
               </div>
             </li>
           </ul>
