--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
+                class="imgs"
               />
               <div class="section-team-wrapper">
                 <h3 class="name-title-team">Mark Guerrero</h3>
@@ -123,6 +124,7 @@
                 alt="Tom Ford"
                 width="264"
                 height="260"
+                class="imgs"
               />
               <div class="section-team-wrapper">
                 <h3 class="name-title-team">Tom Ford</h3>
@@ -135,6 +137,7 @@
                 alt="Camila Garcia"
                 width="264"
                 height="260"
+                class="imgs"
               />
               <div class="section-team-wrapper">
                 <h3 class="name-title-team">Camila Garcia</h3>
@@ -147,6 +150,7 @@
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
+                class="imgs"
               />
               <div class="section-team-wrapper">
                 <h3 class="name-title-team">Daniel Wilson</h3>
@@ -166,6 +170,7 @@
                 alt="Banking App"
                 width="360"
                 height="300"
+                class="imgs"
               />
               <div class="title-name-group">
                 <h3 class="name-title">Banking App</h3>
@@ -178,6 +183,7 @@
                 alt="Cashless Payment"
                 width="360"
                 height="300"
+                class="imgs"
               />
               <div class="title-name-group">
                 <h3 class="name-title">Cashless Payment</h3>
@@ -190,6 +196,7 @@
                 alt="Meditation App"
                 width="360"
                 height="300"
+                class="imgs"
               />
               <div class="title-name-group">
                 <h3 class="name-title">Meditation App</h3>
@@ -202,6 +209,7 @@
                 alt="Taxi Service"
                 width="360"
                 height="300"
+                class="imgs"
               />
               <div class="title-name-group">
                 <h3 class="name-title">Taxi Service</h3>
@@ -214,6 +222,7 @@
                 alt="Screen Illustrations"
                 width="360"
                 height="300"
+                class="imgs"
               />
               <div class="title-name-group">
                 <h3 class="name-title">Screen Illustrations</h3>
@@ -226,6 +235,7 @@
                 alt="Online Courses"
                 width="360"
                 height="300"
+                class="imgs"
               />
               <div class="title-name-group">
                 <h3 class="name-title">Online Courses</h3>
