--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         </nav>
         <address class="contacts">
           <ul class="contacts-text">
-            <li>
+            <li class="mail-link">
               <a href="mailto:info@devstudio.com" class="mail"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="mail-link">
               <a href="tel:+110001111111" class="tel">+11 (000) 111-11-11</a>
             </li>
           </ul>
